added sign-up pages

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,6 +12,15 @@
     }
 }
 
-html {
+html,
+.font-proxima {
     font-family: "Proxima Nova", system-ui, sans-serif;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
 }
