some ui changes

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -24,3 +24,20 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
     margin: 0;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #faefff;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #9617C7;
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #a332cf;
+}
